--- a/data/C/C.yaml
+++ b/data/C/C.yaml
@@ -1,5 +1,9 @@
 rhoT : 3.51 # gram/cm^3
 alattice : 3.57
 A : 12
+Z : 6
 Zion : 4.
 Enl_list : [288,16.6,11.3] # Energies of Ibe et al. Migdal calculation
+E_gap : 5.47
+e0 : 13  # B. Ziaja, R. A. London, and J. Hajdu, “Unified model of secondary electron cascades in diamond,” Journal of Applied Physics 97, 064905 (2005).
+omegap : 31.
