--- a/data/GaAs/GaAs.yaml
+++ b/data/GaAs/GaAs.yaml
@@ -10,3 +10,7 @@ TOvec: [0.0336]  # eV
 e0 : 4.7  #for electron yield, epsilon in (5.2) of 1509.01598. taken from Citation: J. Appl. Phys. 39, 2029 (1968); doi: 10.1063/1.1656484
 omegap : 16.0
 ombar: 0.018 # average phonon frequency in eV
+mermin_ref: "Y. Tu, C. Kwei and C. Tung, Angular and energy dependences of the surface excitation parameter for semiconducting iii–v compounds, Surface Science 601 (2007) 865."
+lattice_spacing: 5.65 # Angstroms
+cLAkms: 5.2 # km/s
+cTAkms: 3.1 # km/s
