--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,6 @@ examples/data/*
 !examples/data/*txt
 examples/plots/*
 !examples/plots/*pdf
+darkelf/__pycache__
+examples/.*
 examples/darkelf_tester.ipynb
