--- a/data/Si/Si.yaml
+++ b/data/Si/Si.yaml
@@ -13,3 +13,5 @@ lattice_spacing: 5.47 # Angstroms
 cLAkms: 8.7 # km/s
 cTAkms: 5.1 # km/s
 LOvec: [0.060]  # eV
+n_atoms: 1 # Number of distinct atoms
+Avec: [28., 28.]
