--- a/data/Si/Si.yaml
+++ b/data/Si/Si.yaml
@@ -13,4 +13,5 @@ lattice_spacing: 5.47 # Angstroms
 cLAkms: 8.7 # km/s
 cTAkms: 5.1 # km/s
 LOvec: [0.060]  # eV
-Avec: [28., 28.]
+Avec: [28., 28.] # need to clean this up
+atoms: ["Si"]
