--- a/data/SiO2/SiO2.yaml
+++ b/data/SiO2/SiO2.yaml
@@ -9,3 +9,7 @@ eps_inf: 2.4
 ombar: 0.012 # average phonon frequency in eV
 LOvec: [0.04983988, 0.0632297,  0.08648832, 0.10042365, 0.15199925, 0.14319668]  # eV; From Gervais and Piriou PhysRevB.11.3944
 TOvec: [0.04878606, 0.05579092, 0.08616597, 0.09881191, 0.1320385,  0.14356862]
+atoms: ['Si','O']
+Avec: [28., 16.]
+cLAkms: 0. # sound speed is needed here to not break rest of code, but should update
+lattice_spacing : 1. # temp needed here to not break rest of code, but should update
