--- a/data/Si/Si.yaml
+++ b/data/Si/Si.yaml
@@ -15,3 +15,4 @@ cTAkms: 5.1 # km/s
 LOvec: [0.060]  # eV
 Avec: [28., 28.] # need to clean this up
 atoms: ["Si"]
+unitcell: {'Si':{'A': 28., 'mult':2}}
