--- a/data/SiC/SiC.yaml
+++ b/data/SiC/SiC.yaml
@@ -14,3 +14,4 @@ Avec: [28., 12.]
 atoms: ['Si', 'C']
 cLAkms: 10.9 # km/s (Using elasticity parameters from materialsproject and isotropy)
 lattice_spacing: 4.38 # Angstrom
+unitcell: {'Si':{'A': 28., 'mult':1}, 'C':{'A': 12., 'mult':1}}
