Updated the multiphonon code to split it into spin dependent and spin independent portions. We add new example notebooks for the spin dependent process. We moved two debe-waller functions from the multiphonon.py to fnomega.py since they are called by c_ld's

--- a/data/GaAs/GaAs.yaml
+++ b/data/GaAs/GaAs.yaml
@@ -16,4 +16,4 @@ cLAkms: 5.2 # km/s
 cTAkms: 3.1 # km/s
 atoms: ['Ga', 'As'] # names of atoms
 Avec: [69, 75] # Atomic masses
-unitcell: {'Ga':{'A': 69., 'mult':1}, 'As':{'A': 75., 'mult':1}}
+unitcell: {'Ga':{'A': 69., 'mult':1, 'isotope_frac':1}, 'As':{'A': 75., 'mult':1,'isotope_frac':1}}
