Fixed several bugs in the calculation of the mvec and the Haxton nuclear recoil calculation. Also fixed some prefactors for the rate calculation. Added the isotopes in for Ge and Si. Note that the isotope dict must contain all naturally occurring isotopes (or at least the isotope fractions must add up to 1) for the code to work correctly

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ darkelf/__pycache__
 examples/.*
 examples/darkelf_tester.ipynb
 *.DS_Store
+examples/heavy_data.csv
+examples/light_data.csv
+examples/plots/
