--- a/data/SiO2/SiO2.yaml
+++ b/data/SiO2/SiO2.yaml
@@ -14,3 +14,12 @@ Avec: [28., 16.]
 cLAkms: 5.8 # Approx, need to check for source, also direction dependent since non-isotropic
 lattice_spacing : 5.14 # Approx, need to check for source
 unitcell: {'Si':{'A': 28., 'mult':1}, 'O':{'A': 16., 'mult':2}}
+unitcell_anisotropic: {'O_a':{'A':16.,'mult':1}, #Used for anisotropic calculations
+                  'O_b':{'A':16.,'mult':1},
+                  'O_c':{'A':16.,'mult':1},
+                  'O_d':{'A':16.,'mult':1},
+                  'O_e':{'A':16.,'mult':1},
+                  'O_f':{'A':16.,'mult':1},
+                  'Si_a':{'A':28.,'mult':1},
+                  'Si_b':{'A':28.,'mult':1},
+                  'Si_c':{'A':28.,'mult':1}}
