--- a/data/Al2O3/Al2O3_extraordinary.yaml
+++ b/data/Al2O3/Al2O3_extraordinary.yaml
@@ -11,5 +11,7 @@ E_gap: 8.8
 Zion: 3.0
 atoms: ['Al','O']
 Avec: [27., 16.]
-cLAkms: 0. # sound speed is needed here to not break rest of code, but should update
-lattice_spacing : 1. # temp needed here to not break rest of code, but should update
+cLAkms: 11. # Approx, only used for analytic approx for single phonon excitations
+lattice_spacing :  13.11 # Approx, only used for analytic approx for single phonon excitations
+unitcell: {'Al':{'A': 27., 'mult':4, 'isotopes':[{'A':27., 'frac':1, 'atomic_spin':2.5, 'f_p':0.131, 'f_n':0.015}]}, 'O':{'A': 16., 'mult':6, 'isotopes':[{'A':16., 'frac':1, 'atomic_spin':0, 'f_p':0.0, 'f_n':0.0}]}}
+unitcell_anisotropic: {'Al_a':{'A':27.,'mult':4},'O_a':{'A':16.,'mult':2},'O_b':{'A':16.,'mult':2},'O_c':{'A':16.,'mult':2}}
